--- a/linux.conf
+++ b/linux.conf
@@ -4,7 +4,7 @@ object CheckCommand "linuxfabrik/about-me" {
     arguments += {
         "--public-ip-url" = {
             value = "$about_me_public_ip_url$"
-            description = "If you want this check to return the public IP address, specify one ore more comma-separated URLs to "what is my ip" online services. For example: "https://ipv4.icanhazip.com,https://ipecho.net/plain,https://ipinfo.io/ip" (these examples are located in the United States). Default: None"
+            description = "If you want this check to return the public IP address, specify one ore more comma-separated URLs to 'what is my ip' online services. For example: 'https://ipv4.icanhazip.com,https://ipecho.net/plain,https://ipinfo.io/ip' (these examples are located in the United States). Default: None"
         }
         "--tags" = {
             set_if = "$about_me_tags$"
@@ -103,56 +103,103 @@ object CheckCommand "linuxfabrik/by-ssh" {
             set_if = "$by_ssh_always_ok$"
             description = "Always returns OK."
         }
-        "--command" = "$by_ssh_command$"
-        "--configfile" = "$by_ssh_configfile$"
+        "--command" = {
+            value = "$by_ssh_command$"
+            description = "SSH: Command that will be executed on the remote host."
+        }
+        "--configfile" = {
+            value = "$by_ssh_configfile$"
+            description = "SSH: Specifies an alternative per-user configuration file. If a configuration file is given on the command line, the system-wide configuration file (`/etc/ssh/ssh_config`) will be ignored. The default for the per-user configuration file is `~/.ssh/config`. If set to `none`, no configuration files will be read."
+        }
         "--critical-pattern" = {
             repeat_key = true
             value = "$by_ssh_critical_pattern$"
+            description = "Any line matching this pattern (case-insensitive) will count as a critical. Can be specified multiple times."
         }
         "--critical-regex" = {
             repeat_key = true
             value = "$by_ssh_critical_regex$"
+            description = "Any line matching this python regex (case-insensitive) will count as a critical. Can be specified multiple times."
         }
         "--disable-pseudo-terminal" = {
             set_if = "$by_ssh_disable_pseudo_terminal$"
+            description = "SSH: Disable pseudo-terminal allocation."
         }
-        "--hostname" = "$by_ssh_hostname$"
+        "--hostname" = {
+            value = "$by_ssh_hostname$"
+            description = "SSH: Hostname"
+        }
         "--identity" = {
             repeat_key = true
             value = "$by_ssh_identity$"
+            description = "SSH: Selects a file from which the identity (private key) for public key authentication is read. You can also specify a public key file to use the corresponding private key that is loaded in ssh-agent(1) when the private key file is not present locally. The default is `~/.ssh/id_dsa`, `~/.ssh/id_ecdsa`, `~/.ssh/id_ecdsa_sk`, `~/.ssh/id_ed25519`, `~/.ssh/id_ed25519_sk` and `~/.ssh/id_rsa`. Identity files may also be specified on a per-host basis in the configuration file. It is possible to have multiple --identity options (and multiple identities specified in configuration files). If no certificates have been explicitly specified by the CertificateFile directive, ssh will also try to load certificate information from the filename obtained by appending `-cert.pub` to identity filenames."
         }
         "--ipv4" = {
             set_if = "$by_ssh_ipv4$"
+            description = "SSH: Forces ssh to use IPv4 addresses only."
         }
         "--ipv6" = {
             set_if = "$by_ssh_ipv6$"
+            description = "SSH: Forces ssh to use IPv6 addresses only."
         }
-        "--password" = "$by_ssh_password$"
-        "--port" = "$by_ssh_port$"
+        "--password" = {
+            value = "$by_ssh_password$"
+            description = "SH: Password authentication. NOT RECOMMENDED. Requires `sshpass`. If you need to use password-based SSH login, run this plugin only on trusted hosts. `ps` will expose the SSH password."
+        }
+        "--port" = {
+            value = "$by_ssh_port$"
+            description = "SSH: Port to connect to on the remote host. This can be specified on a per-host basis in the configuration file. Default: 22"
+        }
         "--quiet" = {
             set_if = "$by_ssh_quiet$"
+            description = "SSH: Quiet mode. Causes most warning and diagnostic messages to be suppressed."
         }
-        "--severity-retc" = "$by_ssh_severity_retc$"
-        "--severity-stderr" = "$by_ssh_severity_stderr$"
-        "--severity-stdout" = "$by_ssh_severity_stdout$"
-        "--severity-timeout" = "$by_ssh_severity_timeout$"
+        "--severity-retc" = {
+            value = "$by_ssh_severity_retc$"
+            description = "Severity (ok,warn,crit,unknown) for alerting if there is a return code != 0. Default: warn"
+        }
+        "--severity-stderr" = {
+            value = "$by_ssh_severity_stderr$"
+            description = "Severity (ok,warn,crit,unknown) for alerting if there is an output on STDERR. Default: warn"
+        }
+        "--severity-stdout" = {
+            value = "$by_ssh_severity_stdout$"
+            description = "Severity (ok,warn,crit,unknown) for alerting if there is an output on STDOUT. Default: ok"
+        }
+        "--severity-timeout" = {
+            value = "$by_ssh_severity_timeout$"
+            description = "Severity (ok,warn,crit,unknown) on connection problems. Default: unknown"
+        }
         "--shell" = {
             set_if = "$by_ssh_shell$"
+            description = "If specified, allows you to expand environment variables and file globs according to the shell's usual mechanism, which can be a security hazard. Default: You just can run simple shell command without globs, pipes etc."
         }
-        "--skip-stderr" = "$by_ssh_skip_stderr$"
-        "--skip-stdout" = "$by_ssh_skip_stdout$"
+        "--skip-stderr" = {
+            value = "$by_ssh_skip_stderr$"
+            description = "Ignore all (0) or first n lines on STDERR. Default: -1 (no ignore)"
+        }
+        "--skip-stdout" = {
+            value = "$by_ssh_skip_stdout$"
+            description = "Ignore all (0) or first n lines on STDOUT. Default: -1 (no ignore)"
+        }
         "--ssh-option" = {
             repeat_key = true
             value = "$by_ssh_ssh_option$"
+            description = "SSH: Can be used to give options in the format used in the configuration file. This is useful for specifying options for which there is no separate command-line flag. For full details of the options, and their possible values, see ssh_config(5). Can be specified multiple times."
         }
-        "--username" = "$by_ssh_username$"
+        "--username" = {
+            value = "$by_ssh_username$"
+            description = "SSH: Username. Default: root"
+        }
         "--warning-pattern" = {
             repeat_key = true
             value = "$by_ssh_warning_pattern$"
+            description = "Any line matching this pattern (case-insensitive) will count as a warning. Can be specified multiple times."
         }
         "--warning-regex" = {
             repeat_key = true
             value = "$by_ssh_warning_regex$"
+            description = "Any line matching this python regex (case-insensitive) will count as a warning. Can be specified multiple times."
         }
     }
 }
