Add description to cpu-usage

--- a/windows.conf
+++ b/windows.conf
@@ -96,9 +96,18 @@ object CheckCommand "linuxfabrik/cpu-usage-windows" {
             set_if = "$cpu_usage_windows_always_ok$"
             description = "Always returns OK."
         }
-        "--count" = "$cpu_usage_windows_count$"
-        "--critical" = "$cpu_usage_windows_critical$"
-        "--warning" = "$cpu_usage_windows_warning$"
+        "--count" = {
+            value = "$cpu_usage_windows_count$"
+            description = "Number of times the value has to be above the given thresholds. Default: 5"
+        }
+        "--critical" = {
+            value = "$cpu_usage_windows_critical$"
+            description = "Set the critical threshold CPU Usage Percentage. Default: 90"
+        }
+        "--warning" = {
+            value = "$cpu_usage_windows_warning$"
+            description = "Set the warning threshold CPU Usage Percentage. Default: 80"
+        }
     }
 }
 
