--- a/linux.conf
+++ b/linux.conf
@@ -250,9 +250,18 @@ object CheckCommand "linuxfabrik/cpu-usage" {
             set_if = "$cpu_usage_always_ok$"
             description = "Always returns OK."
         }
-        "--count" = "$cpu_usage_count$"
-        "--critical" = "$cpu_usage_critical$"
-        "--warning" = "$cpu_usage_warning$"
+        "--count" = {
+            value = "$cpu_usage_count$"
+            description = "Number of times the value has to be above the given thresholds. Default: 5"
+        }
+        "--critical" = {
+            value = "$cpu_usage_critical$"
+            description = "Set the critical threshold CPU Usage Percentage. Default: 90"
+        }
+        "--warning" = {
+            value = "$cpu_usage_warning$"
+            description = "Set the warning threshold CPU Usage Percentage. Default: 80"
+        }
     }
 }
 
