--- a/windows.conf
+++ b/windows.conf
@@ -197,13 +197,23 @@ object CheckCommand "linuxfabrik/disk-io-windows" {
             set_if = "$disk_io_windows_always_ok$"
             description = "Always returns OK."
         }
-        "--count" = "$disk_io_windows_count$"
-        "--critical" = "$disk_io_windows_critical$"
+        "--count" = {
+            value = "$disk_io_windows_count$"
+            description = "Number of times the value has to be above the given thresholds. Default: 5"
+        }
+        "--critical" = {
+            value = "$disk_io_windows_critical$"
+            description = "Set the CRIT threshold for disk I/O read/write rate over the entire period as a percentage of the maximum disk I/O rate. Default: >= 90"
+        }
         "--ignore" = {
             repeat_key = true
             value = "$disk_io_windows_ignore$"
+            description = "Ignore disk names starting with a string like 'sr' (repeating). Default: ['sr', 'loop', 'zram']"
         }
-        "--warning" = "$disk_io_windows_warning$"
+        "--warning" = {
+            value = "$disk_io_windows_warning$"
+            description = "et the CRIT threshold for disk I/O read/write rate over the entire period as a percentage of the maximum disk I/O rate. Default: >= 80"
+        }
     }
 }
 
