Add description to disk-usage

--- a/linux.conf
+++ b/linux.conf
@@ -415,28 +415,39 @@ object CheckCommand "linuxfabrik/disk-usage" {
             set_if = "$disk_usage_always_ok$"
             description = "Always returns OK."
         }
-        "--critical" = "$disk_usage_critical$"
+        "--critical" = {
+            value = "$disk_usage_critical$"
+            description = "Critical threshold, of the form '<number>[unit][method]', where unit is one of `%|K|M|G|T|P` and method is one of `USED|FREE`. If 'unit' is omitted, `%` is assumed. `K` means `kibibyte` etc. If 'method' is omitted, `USED` is assumed. `USED` means 'number ore more', `FREE` means 'number or less'. Examples: `95` = alert at 95% usage or more. `9.5M` = alert when 9.5 MiB or more is used. Other self-explanatory examples are `95%USED`, `5%FREE`, `9.5GFREE`, `1400GUSED`. Default: 95%USED"
+        }
         "--exclude-pattern" = {
             repeat_key = true
             value = "$disk_usage_exclude_pattern$"
+            description = "Any line matching this pattern (case-insensitive) will count as a exclude. The mountpoint is excluded if it contains the specified value. Example: 'boot' excludes '/boot' as well as 'boot/efi'. Can be specified multiple times. On Windows, use drive letters without backslash ('Y:' or 'Y'). Includes are matched before excludes."
         }
         "--exclude-regex" = {
             repeat_key = true
             value = "$disk_usage_exclude_regex$"
+            description = "Any line matching this python regex (case-insensitive) will count as a exclude. Can be specified multiple times. On Windows, use drive letters without backslash ('Y:' or 'Y'). Includes are matched before excludes."
         }
         "--include-pattern" = {
             repeat_key = true
             value = "$disk_usage_include_pattern$"
+            description = "Any line matching this pattern (case-insensitive) will count as a include. The mountpoint is included if it contains the specified value. Example: 'boot' includes '/boot' as well as '/boot/efi'. Can be specified multiple times. On Windows, use drive letters without backslash ('Y:' or 'Y'). Includes are matched before excludes."
         }
         "--include-regex" = {
             repeat_key = true
             value = "$disk_usage_include_regex$"
+            description = "Any line matching this python regex (case-insensitive) will count as a include. Can be specified multiple times. On Windows, use drive letters without backslash ('Y:' or 'Y'). Includes are matched before excludes."
         }
         "--perfdata-regex" = {
             repeat_key = true
             value = "$disk_usage_perfdata_regex$"
+            description = "Only print perfdata keys matching this python regex. For a list of perfdata keys, have a look at the README and run this plugin. Can be specified multiple times."
         }
-        "--warning" = "$disk_usage_warning$"
+        "--warning" = {
+            value = "$disk_usage_warning$"
+            description = "Warning threshold, of the form '<number>[unit][method]', where unit is one of `%|K|M|G|T|P` and method is one of `USED|FREE`. If 'unit' is omitted, `%` is assumed. `K` means `kibibyte` etc. If 'method' is omitted, `USED` is assumed. `USED` means 'number ore more', `FREE` means 'number or less'. Examples: `95` = alert at 95% usage. `9.5M` = alert when 9.5 MiB is used. Other self-explanatory examples are `95%USED`, `5%FREE`, `9.5GFREE`, `1400GUSED`. Default: 90%USED"
+        }
     }
 }
 
