Rename macros of all windows commands, add description dns

--- a/linux.conf
+++ b/linux.conf
@@ -481,11 +481,26 @@ object CheckCommand "linuxfabrik/dns" {
             set_if = "$dns_always_ok$"
             description = "Always returns OK."
         }
-        "--critical" = "$dns_critical$"
-        "--hostname" = "$dns_hostname$"
-        "--port" = "$dns_port$"
-        "--type" = "$dns_type$"
-        "--warning" = "$dns_warning$"
+        "--critical" = {
+            value = "$dns_critical$"
+            description = "Return critical if elapsed time in ms exceeds value. Default: None"
+        }
+        "--hostname" = {
+            value = "$dns_hostname$"
+            description = "The host or ip address to check. Default: localhost"
+        }
+        "--port" = {
+            value = "$dns_port$"
+            description = "The port number. Default: 53"
+        }
+        "--type" = {
+            value = "$dns_type$"
+            description = "Connection (udp,udp6,tcp,tcp6) type. Can be optionally specified in order to narrow the list of addresses returned."
+        }
+        "--warning" = {
+            value = "$dns_warning$"
+            description = "Return warning if elapsed time in ms exceeds value. Default: None"
+        }
     }
 }
 
