Add description load

--- a/linux.conf
+++ b/linux.conf
@@ -1694,8 +1694,14 @@ object CheckCommand "linuxfabrik/load" {
             set_if = "$load_always_ok$"
             description = "Always returns OK."
         }
-        "--critical" = "$load_critical$"
-        "--warning" = "$load_warning$"
+        "--critical" = {
+            value = "$load_critical$"
+            description = "Set the critical threshold for load15 per cpu. Default: 5.0"
+        }
+        "--warning" = {
+            value = "$load_warning$"
+            description = "Set the warning threshold for load15 per cpu. Default: 1.15"
+        }
     }
 }
 
