Add description mailq

--- a/linux.conf
+++ b/linux.conf
@@ -1768,8 +1768,14 @@ object CheckCommand "linuxfabrik/mailq" {
             set_if = "$mailq_always_ok$"
             description = "Always returns OK."
         }
-        "--critical" = "$mailq_critical$"
-        "--warning" = "$mailq_warning$"
+        "--critical" = {
+            value = "$mailq_critical$"
+            description = "Set the critical threshold for mails in the queue. Default: 250"
+        }
+        "--warning" = {
+            value = "$mailq_warning$"
+            description = "Set the warning threshold for mails in the queue. Default: 2"
+        }
     }
 }
 
