Add description memory-usage

--- a/windows.conf
+++ b/windows.conf
@@ -1149,8 +1149,14 @@ object CheckCommand "linuxfabrik/memory-usage-windows" {
             set_if = "$memory_usage_always_ok$"
             description = "Always returns OK."
         }
-        "--critical" = "$memory_usage_critical$"
-        "--warning" = "$memory_usage_warning$"
+        "--critical" = {
+            value = "$memory_usage_critical$"
+            description = "Set the critical threshold for memory usage (in percent). Default: 95"
+        }
+        "--warning" = {
+            value = "$memory_usage_warning$"
+            description = "Set the warning threshold for memory usage (in percent). Default: 90"
+        }
     }
 }
 
