Add description network-connections

--- a/linux.conf
+++ b/linux.conf
@@ -2280,13 +2280,21 @@ object CheckCommand "linuxfabrik/network-connections" {
         "--conn-status" = {
             repeat_key = true
             value = "$network_connections_conn_status$"
+            description = "Filter the status (all,close,close_wait,closing,established,fin_wait1,fin_wait2,last_ack,listen,none,syn_recv,syn_sent,time_wait) of the connections (repeating). Default: None"
         }
         "--conn-type" = {
             repeat_key = true
             value = "$network_connections_conn_type$"
+            description = "Filter the family/type (all,tcp,tcp6,udp,udp6) of the connections (repeating). Default: None"
         }
-        "--critical" = "$network_connections_critical$"
-        "--warning" = "$network_connections_warning$"
+        "--critical" = {
+            value = "$network_connections_critical$"
+            description = "Threshold for the number of connections. Type: None or Range. Default: None"
+        }
+        "--warning" = {
+            value = "$network_connections_warning$"
+            description = "Threshold for the number of connections. Type: None or Range. Default: None"
+        }
     }
 }
 
