Add description network-io

--- a/linux.conf
+++ b/linux.conf
@@ -2306,13 +2306,23 @@ object CheckCommand "linuxfabrik/network-io" {
             set_if = "$network_io_always_ok$"
             description = "Always returns OK."
         }
-        "--count" = "$network_io_count$"
-        "--critical" = "$network_io_critical$"
+        "--count" = {
+            value = "$network_io_count$"
+            description = "Number of times the value has to be above the given thresholds. Default: 5"
+        }
+        "--critical" = {
+            value = "$network_io_critical$"
+            description = "Set the CRIT threshold for network I/O rx/tx rate over the entire period as a percentage of the maximum network I/O rate. Default: >= 90"
+        }
         "--ignore" = {
             repeat_key = true
             value = "$network_io_ignore$"
+            description = "Ignore network interfaces starting with a string like 'tun' (repeating). Default: ['lo']"
         }
-        "--warning" = "$network_io_warning$"
+        "--warning" = {
+            value = "$network_io_warning$"
+            description = "Set the CRIT threshold for network I/O rx/tx rate over the entire period as a percentage of the maximum network I/O rate. Default: >= 80"
+        }
     }
 }
 
