Add description ntp-chronyd, ntp-ntpd, ntp-w32tm

--- a/windows.conf
+++ b/windows.conf
@@ -1816,8 +1816,14 @@ object CheckCommand "linuxfabrik/ntp-w32tm-windows" {
     command = [ LinuxfabrikPluginDir + "\\ntp-w32tm.exe" ]
     timeout = 10s
     arguments += {
-        "--critical" = "$ntp_w32tm_critical$"
-        "--warning" = "$ntp_w32tm_warning$"
+        "--critical" = {
+            value = "$ntp_w32tm_critical$"
+            description = "Set the critical threshold for the time since 'Last Good Sync', in s. Default: 129600s"
+        }
+        "--warning" = {
+            value = "$ntp_w32tm_warning$"
+            description = "Set the warning threshold for the time since 'Last Good Sync', in s. Default: 28800s"
+        }
     }
 }
 
