--- a/linux.conf
+++ b/linux.conf
@@ -2544,8 +2544,14 @@ object CheckCommand "linuxfabrik/ntp-chronyd" {
     command = [ LinuxfabrikPluginDir + "/ntp-chronyd" ]
     timeout = 10s
     arguments += {
-        "--critical" = "$ntp_chronyd_critical$"
-        "--warning" = "$ntp_chronyd_warning$"
+        "--critical" = {
+            value = "$ntp_chronyd_critical$"
+            description = "Set the critical threshold for the ntp time offset, in ms. Default: 86400000ms"
+        }
+        "--warning" = {
+            value = "$ntp_chronyd_warning$"
+            description = "Set the warning threshold for the ntp time offset, in ms. Default: 800ms"
+        }
     }
 }
 
@@ -2553,8 +2559,14 @@ object CheckCommand "linuxfabrik/ntp-ntpd" {
     command = [ LinuxfabrikPluginDir + "/ntp-ntpd" ]
     timeout = 10s
     arguments += {
-        "--critical" = "$ntp_ntpd_critical$"
-        "--warning" = "$ntp_ntpd_warning$"
+        "--critical" = {
+            value = "$ntp_ntpd_critical$"
+            description = "Set the critical threshold for the ntp time offset, in ms. Default: 86400000ms"
+        }
+        "--warning" = {
+            value = "$ntp_ntpd_warning$"
+            description = "Set the warning threshold for the ntp time offset, in ms. Default: 800ms"
+        }
     }
 }
 
