Add description ping

--- a/linux.conf
+++ b/linux.conf
@@ -2728,10 +2728,22 @@ object CheckCommand "linuxfabrik/ping" {
             set_if = "$ping_always_ok$"
             description = "Always returns OK."
         }
-        "--count" = "$ping_count$"
-        "--hostname" = "$ping_hostname$"
-        "--interval" = "$ping_interval$"
-        "--timeout" = "$ping_timeout$"
+        "--count" = {
+            value = "$ping_count$"
+            description = "Stop after sending count ECHO_REQUEST packets. Default: 5"
+        }
+        "--hostname" = {
+            value = "$ping_hostname$"
+            description = "The ping destination. Default: 127.0.0.1"
+        }
+        "--interval" = {
+            value = "$ping_interval$"
+            description = "Wait interval seconds between sending each packet. Real number allowed with dot as a decimal separator (regardless locale setup). Default: 0.2"
+        }
+        "--timeout" = {
+            value = "$ping_timeout$"
+            description = "pecify a timeout, in seconds, before ping exits regardless of how many packets have been sent or received. Default: 5"
+        }
     }
 }
 
