Add description procs

--- a/linux.conf
+++ b/linux.conf
@@ -2840,21 +2840,58 @@ object CheckCommand "linuxfabrik/procs" {
             set_if = "$procs_always_ok$"
             description = "Always returns OK."
         }
-        "--argument" = "$procs_argument$"
-        "--command" = "$procs_command$"
-        "--critical" = "$procs_critical$"
-        "--critical-age" = "$procs_critical_age$"
-        "--critical-mem" = "$procs_critical_mem$"
-        "--critical-mem-percent" = "$procs_critical_mem_percent$"
+        "--argument" = {
+            value = "$procs_argument$"
+            description = "Filter: Search only for processes containing ARGUMENT in the command, for example `-s` (case-insensitive)."
+        }
+        "--command" = {
+            value = "$procs_command$"
+            description = "Filter: Search only for processes starting with COMMAND, for example `bash` (without path, case-insensitive)."
+        }
+        "--critical" = {
+            value = "$procs_critical$"
+            description = "Threshold for the number of processes. Type: None or Range. Default: None"
+        }
+        "--critical-age" = {
+            value = "$procs_critical_age$"
+            description = "Threshold for age of the process, in seconds. Type: None or Range. Default: None"
+        }
+        "--critical-mem" = {
+            value = "$procs_critical_mem$"
+            description = "Threshold for memory usage, in bytes. Type: None or Range. Default: None"
+        }
+        "--critical-mem-percent" = {
+            value = "$procs_critical_mem_percent$"
+            description = "Threshold for memory usage, in percent. Type: None or Range. Default: None"
+        }
         "--no-kthreads" = {
             set_if = "$procs_no_kthreads$"
+            description = "Filter: Only scan for non kernel threads (works on Linux only). Default: False"
         }
-        "--status" = "$procs_status$"
-        "--username" = "$procs_username$"
-        "--warning" = "$procs_warning$"
-        "--warning-age" = "$procs_warning_age$"
-        "--warning-mem" = "$procs_warning_mem$"
-        "--warning-mem-percent" = "$procs_warning_mem_percent$"
+        "--status" = {
+            value = "$procs_status$"
+            description = "Filter: Search only for processes that have a specific status (dead,disk-sleep,idle,locked,parked,running,sleeping,stopped,suspended,tracing-stop,waiting,wake-kill,waking,zombie). Default: None"
+        }
+        "--username" = {
+            value = "$procs_username$"
+            description = "Filter: Search only for processes with specific user name, e.g. `apache` (case-insensitive)."
+        }
+        "--warning" = {
+            value = "$procs_warning$"
+            description = "Threshold for the number of processes. Type: None or Range. Default: None"
+        }
+        "--warning-age" = {
+            value = "$procs_warning_age$"
+            description = "Threshold for age of the process, in seconds. Type: None or Range. Default: None"
+        }
+        "--warning-mem" = {
+            value = "$procs_warning_mem$"
+            description = "Threshold for memory usage, in bytes. Type: None or Range. Default: None"
+        }
+        "--warning-mem-percent" = {
+            value = "$procs_warning_mem_percent$"
+            description = "Threshold for memory usage, in percent. Type: None or Range. Default: None"
+        }
     }
 }
 
