Add description service

--- a/windows.conf
+++ b/windows.conf
@@ -2350,14 +2350,27 @@ object CheckCommand "linuxfabrik/service-windows" {
             set_if = "$service_always_ok$"
             description = "Always returns OK."
         }
-        "--critical" = "$service_critical$"
-        "--service" = "$service_service$"
-        "--starttype" = "$service_starttype$"
+        "--critical" = {
+            value = "$service_critical$"
+            description = "Set the CRIT threshold. Accepts ranges. Default: None"
+        }
+        "--service" = {
+            value = "$service_service$"
+            description = "Name of the service. Supports Python Regular Expressions (regex)."
+        }
+        "--starttype" = {
+            value = "$service_starttype$"
+            description = "Expected service start type (automatic,disabled,manual). Default: automatic"
+        }
         "--status" = {
             repeat_key = true
             value = "$service_status$"
+            description = "At least one expected service (continue_pending,pause_pending,paused,running,start_pending,stop_pending,stopped) status (repeating). Default: running"
         }
-        "--warning" = "$service_warning$"
+        "--warning" = {
+            value = "$service_warning$"
+            description = "Set the WARN threshold. Accepts ranges. Default: 1:"
+        }
     }
 }
 
