Add description swap-usage

--- a/windows.conf
+++ b/windows.conf
@@ -2516,8 +2516,14 @@ object CheckCommand "linuxfabrik/swap-usage-windows" {
             set_if = "$swap_usage_always_ok$"
             description = "Always returns OK."
         }
-        "--critical" = "$swap_usage_critical$"
-        "--warning" = "$swap_usage_warning$"
+        "--critical" = {
+            value = "$swap_usage_critical$"
+            description = "Set the critical threshold for swap usage (in percent). Default: 90"
+        }
+        "--warning" = {
+            value = "$swap_usage_warning$"
+            description = "Set the warning threshold for swap usage (in percent). Default: 70"
+        }
     }
 }
 
