Add description systemd-unit

--- a/linux.conf
+++ b/linux.conf
@@ -3551,15 +3551,29 @@ object CheckCommand "linuxfabrik/systemd-unit" {
         "--activestate" = {
             repeat_key = true
             value = "$systemd_unit_activestate$"
+            description = "Expected systemd (activating,active,deactivating,failed,inactive,None) ActiveState (repeating). This is the high-level unit activation state(s), i.e. generalization of SUB. If ommited or set to 'None', the unit's active state will not be checked."
         }
-        "--loadstate" = "$systemd_unit_loadstate$"
-        "--severity" = "$systemd_unit_severity$"
+        "--loadstate" = {
+            value = "$systemd_unit_loadstate$"
+            description = "Expected systemd LoadState (activating,active,deactivating,failed,inactive,loaded,maintenance,masked,None,not-found,reloading). Reflects whether the unit definition was properly loaded. If ommited or set to 'None', the unit's load state will not be checked. Default: loaded"
+        }
+        "--severity" = {
+            value = "$systemd_unit_severity$"
+            description = "If something was found, the check returns WARN (warn,crit) unless set here. Default: warn"
+        }
         "--substate" = {
             repeat_key = true
             value = "$systemd_unit_substate$"
+            description = "Expected systemd (abandoned,activating,activating-done,active,auto-restart,cleaning,condition,deactivating,deactivating-sigkill,deactivating-sigterm,dead,elapsed,exited,failed,final-sigkill,final-sigterm,final-watchdog,listening,mounted,mounting,mounting-done,None,plugged,reload,remounting,remounting-sigkill,remounting-sigterm,running,start,start-chown,start-post,start-pre,stop,stop-post,stop-pre,stop-pre-sigkill,stop-pre-sigterm,stop-sigkill,stop-sigterm,stop-watchdog,tentative,unmounting,unmounting-sigkill,unmounting-sigterm,waiting) SubState (repeating). This is the low-level unit activation state(s); values depend on unit type. If ommited or set to 'None', the unit's substate will not be checked."
         }
-        "--unit" = "$systemd_unit_unit$"
-        "--unitfilestate" = "$systemd_unit_unitfilestate$"
+        "--unit" = {
+            value = "$systemd_unit_unit$"
+            description = "The unit name (service, timer, mount etc.). Required. For example 'sshd', 'sshd.service', 'my-samba-mount.mount' etc."
+        }
+        "--unitfilestate" = {
+            value = "$systemd_unit_unitfilestate$"
+            description = "Expected systemd UnitFileState. If ommited or set to 'None', the unit's unit-file state will not be checked. If 'empty', checks exactly for `UnitFileState=''`."
+        }
     }
 }
 
