Add description systemd-units-failed

--- a/linux.conf
+++ b/linux.conf
@@ -3588,6 +3588,7 @@ object CheckCommand "linuxfabrik/systemd-units-failed" {
         "--ignore" = {
             repeat_key = true
             value = "$systemd_units_failed_ignore$"
+            description = "Ignore a unit, for example 'dhcpd.service' (repeating). Supports glob according to https://docs.python.org/3/library/fnmatch.html. Default: []"
         }
     }
 }
