Add description uptime and users

--- a/windows.conf
+++ b/windows.conf
@@ -2549,8 +2549,14 @@ object CheckCommand "linuxfabrik/uptime-windows" {
             set_if = "$uptime_always_ok$"
             description = "Always returns OK."
         }
-        "--critical" = "$uptime_critical$"
-        "--warning" = "$uptime_warning$"
+        "--critical" = {
+            value = "$uptime_critical$"
+            description = "Set the critical threshold for uptime in days. Default: 366"
+        }
+        "--warning" = {
+            value = "$uptime_warning$"
+            description = "Set the warning threshold for uptime in days. Default: 180"
+        }
     }
 }
 
@@ -2558,8 +2564,14 @@ object CheckCommand "linuxfabrik/users-windows" {
     command = [ LinuxfabrikPluginDir + "\\users.exe" ]
     timeout = 10s
     arguments += {
-        "--critical" = "$users_critical$"
-        "--warning" = "$users_warning$"
+        "--critical" = {
+            value = "$users_critical$"
+            description = "Set the critical threshold for logged in tty/pts users, in the format '3,10'. On Windows, you can additionally set it for disconnected users, in the format '3,10,1'. Default: [None, None, None]"
+        }
+        "--warning" = {
+            value = "$users_warning$"
+            description = "Set the warning threshold for logged in tty/pts users, in the format '1,5'. On Windows, you can additionally set it for disconnected users, in the format '1,5,10'. Default: [1, 20, 1]"
+        }
     }
 }
 
